2009-09-07 Magnus Hagdorn
 * doc/common/Makefile.am: forgot to distribute file
 * doc/num/figs/Makefile.am: ditto
 * doc/ug/varlist.tex: include list of variables

2009-09-07 Magnus Hagdorn
 * Makefile.am: forgot sub directory
 * configure.in: rename package to glimmer-cism
 * doc/Makefile.am: do not distribute generated docs
 * doc/dg/figures/Makefile.am: do not distribute images
 * doc/num/figs/Makefile.am: ditto
 * doc/num/gnu/Makefile.am: ditto
 * doc/ug/figs/Makefile.am: ditto
 * doc/ug/Makefile.am: fix paths
 * example-drivers/glint/src/Makefile.am: fix bug
 * tests/exact-isothermal/src/Makefile.am:  rename installation directory

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * libglint/Makefile.am: forgot a file
 * add glint examples

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * EISMINT-3/src/Makefile.am: link to the correct libs
 * add libglint and EISMINT3 examples

2009-09-04 Magnus Hagdorn
 * added EISMINT-3 greenland example

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * libglimmer/Makefile.am: forgot a file
 * add eis driver and example setups

2009-09-04 Magnus Hagdorn
 * Makefile.am: distribute new file
 * configure.in: handle new directories
 * tests/Makefile.am: ditto
 * add EISMINT 1 and 2 tests

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: create new Makefiles

2009-09-04 Magnus Hagdorn
 * configure.in: move internal blas around to libglimmer-solve
 * libglide/Makefile.am: undo rearrangement since dep tracker is fixed
 * libglimmer/Makefile.am: blas directory is removed
 * libglimmer-solve/Makefile.am: optionally build internal blas and link to
   libglimmer-solve.a
 * libglimmer-solve/SLAP/Makefile.am: fix bug
 * move libglimmer/blas to libglimmer-solve/blas

2009-09-04 Magnus Hagdorn